commit translated contents

--- a/articles/app-service/containers/toc.yml
+++ b/articles/app-service/containers/toc.yml
@@ -23,7 +23,7 @@ items:
     href: quickstart-python.md
   - name: Een Ruby-app maken
     href: quickstart-ruby.md
-  - name: Een Docker-/Go-app maken
+  - name: Een aangepaste container uitvoeren
     href: quickstart-docker-go.md
   - name: Een app met meerdere containers maken
     href: quickstart-multi-container.md
@@ -48,7 +48,7 @@ items:
       href: tutorial-java-enterprise-postgresql-app.md
   - name: App met meerdere containers
     href: tutorial-multi-container-app.md
-  - name: Aangepaste Docker-afbeelding
+  - name: Container uitvoeren vanuit ACR
     href: tutorial-custom-docker-image.md
   - name: Aangepast domein toewijzen
     href: ../app-service-web-tutorial-custom-domain.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
@@ -72,10 +72,6 @@ items:
     href: ../overview-hosting-plans.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
   - name: App Service-omgeving
     href: ../environment/intro.md
-  - name: Gids voor Java-ontwikkelaars
-    href: app-service-linux-java.md
-  - name: Gids voor Java Enterprise
-    href: app-service-java-enterprise.md
   - name: Inkomende en uitgaande IP-adressen
     href: ../overview-inbound-outbound-ips.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
   - name: Verificatie en autorisatie
@@ -88,10 +84,22 @@ items:
   items:
   - name: App configureren
     items:
-    - name: Python-installatiekopie
-      href: how-to-configure-python.md
     - name: App-instellingen gebruiken
       href: ../web-sites-configure.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
+    - name: ASP.NET Core configureren
+      href: configure-language-dotnetcore.md
+    - name: Node.js configureren
+      href: configure-language-nodejs.md
+    - name: PHP configureren
+      href: configure-language-php.md
+    - name: Java configureren
+      href: configure-language-java.md
+    - name: Python configureren
+      href: how-to-configure-python.md
+    - name: Ruby configureren
+      href: configure-language-ruby.md
+    - name: Een aangepaste container configureren
+      href: configure-custom-container.md
     - name: Inhoud leveren met Storage
       href: how-to-serve-content-from-azure-storage.md
   - name: Implementeren in Azure
@@ -158,8 +166,6 @@ items:
       href: ../web-sites-monitor.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
     - name: Logboeken inschakelen
       href: ../troubleshoot-diagnostic-logs.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
-    - name: Java APM-integraties
-      href: how-to-java-apm-monitoring.md
   - name: Een app beheren
     items:
     - name: Een back-up maken van een app
@@ -222,9 +228,9 @@ items:
         href: ../faq-open-source-technologies.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
       - name: Veelgestelde vragen over configuratie en beheer
         href: ../faq-configuration-and-management.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
-ms.openlocfilehash: f29fa4901e2eb8e3a6bcabcc72e4dba37041186a
-ms.sourcegitcommit: 549070d281bb2b5bf282bc7d46f6feab337ef248
+ms.openlocfilehash: 250501832c3daaeee9935c2796e6da9df3483e35
+ms.sourcegitcommit: 031e4165a1767c00bb5365ce9b2a189c8b69d4c0
 ms.translationtype: HT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 12/21/2018
-ms.locfileid: "53719520"
+ms.lasthandoff: 04/13/2019
+ms.locfileid: "59544869"
