--- a/articles/notification-hubs/TOC.yml
+++ b/articles/notification-hubs/TOC.yml
@@ -15,16 +15,16 @@ items:
   items:
   - name: Android
     items:
-    - name: Pushmeldingen verzenden naar Android-apparaten met Firebase Cloud Messaging
+    - name: Pushmeldingen verzenden met Firebase Cloud Messaging
       href: notification-hubs-android-push-notification-google-fcm-get-started.md
-    - name: Pushmeldingen verzenden naar Android-apparaten met Google Cloud Messaging
+    - name: Pushmeldingen verzenden met Google Cloud Messaging
       href: notification-hubs-android-push-notification-google-gcm-get-started.md
+    - name: Pushmeldingen verzenden naar specifieke apparaten
+      href: notification-hubs-aspnet-backend-android-xplat-segmented-gcm-push-notification.md
+    - name: Pushmeldingen verzenden naar specifieke gebruikers
+      href: notification-hubs-aspnet-backend-gcm-android-push-to-user-google-notification.md
     - name: Pushmeldingen verzenden naar Xamarin Android-apps
       href: xamarin-notification-hubs-push-notifications-android-gcm.md
-    - name: Pushmeldingen verzenden naar specifieke Android-apparaten
-      href: notification-hubs-aspnet-backend-android-xplat-segmented-gcm-push-notification.md
-    - name: Pushmeldingen verzenden naar specifieke Android-appgebruikers
-      href: notification-hubs-aspnet-backend-gcm-android-push-to-user-google-notification.md
   - name: Baidu
     items:
     - name: Pushmeldingen verzenden met behulp van Baidu Cloud Push
@@ -37,31 +37,31 @@ items:
     items:
     - name: Pushmeldingen verzenden naar iOS-apps
       href: notification-hubs-ios-apple-push-notification-apns-get-started.md
-    - name: Pushmeldingen verzenden naar Xamarin iOS-apps
-      href: xamarin-notification-hubs-ios-push-notification-apns-get-started.md
     - name: Pushmeldingen verzenden naar specifieke apparaten
       href: notification-hubs-ios-xplat-segmented-apns-push-notification.md
-    - name: Gelokaliseerde pushmeldingen verzenden naar iOS-apparaten
-      href: notification-hubs-ios-xplat-localized-apns-push-notification.md
     - name: Pushmeldingen verzenden naar specifieke gebruikers
       href: notification-hubs-aspnet-backend-ios-apple-apns-notification.md
+    - name: Pushmeldingen verzenden naar Xamarin iOS-apps
+      href: xamarin-notification-hubs-ios-push-notification-apns-get-started.md
+    - name: Gelokaliseerde pushmeldingen verzenden naar iOS-apparaten
+      href: notification-hubs-ios-xplat-localized-apns-push-notification.md
   - name: Kindle
     items:
-    - name: Pushmeldingen verzenden naar een Kindle-toepassing met behulp van Amazon Device Messaging
+    - name: Pushmeldingen verzenden met behulp van Amazon Device Messaging
       href: notification-hubs-kindle-amazon-adm-push-notification.md
   - name: Windows Phone
     items:
-    - name: Pushmeldingen verzenden naar Windows Phone-apps
+    - name: Pushmeldingen aan apps
       href: notification-hubs-windows-mobile-push-notifications-mpns.md
-    - name: Pushmeldingen verzenden naar specifieke Windows Phone-apparaten
+    - name: Pushmeldingen verzenden naar specifieke apparaten
       href: notification-hubs-windows-phone-push-xplat-segmented-mpns-notification.md
   - name: Windows
     items:
     - name: Pushmeldingen verzenden naar Universal Windows Platform-apps
       href: notification-hubs-windows-store-dotnet-get-started-wns-push-notification.md
-    - name: Pushmeldingen verzenden naar specifieke Windows-apparaten
+    - name: Pushmeldingen verzenden naar specifieke apparaten
       href: notification-hubs-windows-notification-dotnet-push-xplat-segmented-wns.md
-    - name: Gelokaliseerde pushmeldingen verzenden naar Windows-apps
+    - name: Gelokaliseerde pushmeldingen verzenden naar apps
       href: notification-hubs-windows-store-dotnet-xplat-localized-wns-push-notification.md
     - name: Pushmeldingen verzenden naar specifieke gebruikers
       href: notification-hubs-aspnet-backend-windows-dotnet-wns-notification.md
@@ -140,9 +140,7 @@ items:
     href: /dotnet/api/microsoft.azure.notificationhubs
   - name: PowerShell
     href: /powershell/module/az.notificationhubs
-  - name: REST-API voor Notification Hubs-service
-    href: https://docs.microsoft.com/previous-versions/azure/reference/dn223264(v%3dazure.100)
-  - name: REST API voor beheer
+  - name: REST
     href: /rest/api/notificationhubs/
   - name: Resource Manager-sjabloon
     href: /azure/templates/microsoft.notificationhubs/allversions
@@ -168,9 +166,9 @@ items:
     href: https://azure.microsoft.com/regions/services/
   - name: Ondersteuningsopties
     href: https://azure.microsoft.com/support/options/
-ms.openlocfilehash: 0d7708a44e953659e1904fe2bc3b79364ba33926
-ms.sourcegitcommit: f24b62e352e0512dfa2897362021b42e0cb9549d
+ms.openlocfilehash: 1a62b954144db057a19fc39069538f208a1bf035
+ms.sourcegitcommit: 1c2cf60ff7da5e1e01952ed18ea9a85ba333774c
 ms.translationtype: HT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 04/11/2019
-ms.locfileid: "59505326"
+ms.lasthandoff: 04/12/2019
+ms.locfileid: "59521798"
