--- a/articles/active-directory/develop/index.yml
+++ b/articles/active-directory/develop/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: ab6fd4a2becde56ed538581561eb170f25c57278
-ms.sourcegitcommit: 3aa0fbfdde618656d66edf7e469e543c2aa29a57
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 02/05/2019
-ms.locfileid: "55728908"
 documentType: LandingData
 title: Microsoft Identity Platform (Azure Active Directory voor ontwikkelaars)
 metadata:
   title: Microsoft Identity Platform (Azure Active Directory voor ontwikkelaars)
-  description: Leer hoe u met het Microsoft Identity Platform apps bouwt waarbij gebruikers zich veilig kunnen aanmelden met alle Microsoft-identiteiten en waarmee tokens worden opgehaald voor het aanroepen van Microsoft Graph, andere Microsoft-API's of API's die door ontwikkelaars zijn gemaakt.
+  description: 'Leer hoe u met het Microsoft Identity Platform apps bouwt waarbij gebruikers zich veilig kunnen aanmelden met alle Microsoft-identiteiten en waarmee tokens worden opgehaald voor het aanroepen van Microsoft Graph, andere Microsoft-API''s of API''s die door ontwikkelaars zijn gemaakt.'
   services: active-directory
   author: CelesteDG
   manager: mtillman
@@ -21,242 +15,242 @@ metadata:
   ms.date: 09/24/2018
   ms.author: celested
 abstract:
-  description: Het Microsoft Identity Platform bouwt voort op de identiteitsservice en het ontwikkelaarsplatform van Azure Active Directory (Azure AD). Met het Microsoft Identity Platform kunnen ontwikkelaars toepassingen maken waarbij gebruikers zich met alle Microsoft-identiteiten kunnen aanmelden en waarmee tokens worden opgehaald voor het aanroepen van Microsoft Graph, andere Microsoft-API's of API's die door ontwikkelaars zijn gemaakt. Het platform biedt uitgebreide functionaliteit en bevat een verificatieservice, open source-bibliotheken, mogelijkheden voor toepassingsregistratie en -configuratie, volledige ontwikkelaarsdocumentatie, codevoorbeelden en andere inhoud voor ontwikkelaars. Het Microsoft Identity Platform biedt ondersteuning voor standaardprotocollen als OAuth 2.0 en OpenID Connect.
+  description: 'Het Microsoft Identity Platform bouwt voort op de identiteitsservice en het ontwikkelaarsplatform van Azure Active Directory (Azure AD). Met het Microsoft Identity Platform kunnen ontwikkelaars toepassingen maken waarbij gebruikers zich met alle Microsoft-identiteiten kunnen aanmelden en waarmee tokens worden opgehaald voor het aanroepen van Microsoft-API''s, zoals Microsoft Graph, of API''s die door ontwikkelaars zijn gemaakt. Het is een zeer uitgebreid platform, dat bestaat uit een verificatieservice die voldoet aan de normen voor OAuth 2.0 en OpenID Connect, open source-bibliotheken, registratie en configuratie van toepassingen, robuuste conceptuele en referentiedocumentatie, ''quickstart-voorbeelden'', codevoorbeelden, zelfstudies en handleidingen.'
   aside:
     image:
-      alt: 
+      alt: null
       height: 110
       src: ./media/index/video-featured.png
       width: 250
-    title: Web-apps met verificatie bouwen (9:31)
-    href: https://www.youtube.com/watch?v=QWh5HZK9vRA
+    title: 'Web-apps met verificatie bouwen (9:31)'
+    href: 'https://www.youtube.com/watch?v=QWh5HZK9vRA'
     width: 250
 sections:
-- items:
-  - type: list
-    style: cards
-    className: cardsM
-    columns: 3
+  - items:
+      - type: list
+        style: cards
+        className: cardsM
+        columns: 3
+        items:
+          - href: /azure/active-directory/develop/about-microsoft-identity-platform
+            html: <p>Krijg een goed beeld van het Microsoft Identity Platform en de functies en mogelijkheden ervan.</p>
+            image:
+              src: ./media/index/i_get-started.svg
+            title: Over het Microsoft Identity Platform
+          - href: /azure/active-directory/develop/azure-ad-developers-guide/
+            html: '<p>Verifieer Azure AD-identiteiten (werk- en schoolaccounts) door via het Azure AD v1.0-eindpunt tokens aan te vragen met behulp van Azure AD Authentication Library (ADAL), de Azure-portal of de Azure AD Graph API.</p>'
+            image:
+              src: ./media/index/i_advanced.svg
+            title: v1.0
+          - href: /azure/active-directory/develop/v2-overview
+            html: '<p>Verifieer een uitgebreidere set Microsoft-identiteiten via het zogenoemde Azure AD v2.0-eindpunt met behulp van Microsoft Authentication Library (MSAL), de Azure-portal of de Microsoft Graph API.</p>'
+            image:
+              src: ./media/index/i_investigate.svg
+            title: v2.0
+  - title: Snelstartgidsen
     items:
-    - href: /azure/active-directory/develop/about-microsoft-identity-platform
-      html: <p>Krijg een goed beeld van het Microsoft Identity Platform en de functies en mogelijkheden ervan.</p>
-      image:
-        src: ./media/index/i_get-started.svg
-      title: Over het Microsoft Identity Platform
-    - href: /azure/active-directory/develop/azure-ad-developers-guide/
-      html: <p>Verifieer Azure AD-identiteiten (werk- en schoolaccounts) door via het Azure AD v1.0-eindpunt tokens aan te vragen met behulp van Azure AD Authentication Library (ADAL), de Azure-portal of de Azure AD Graph API.</p>
-      image:
-        src: ./media/index/i_advanced.svg
-      title: v1.0
-    - href: /azure/active-directory/develop/v2-overview
-      html: <p>Verifieer een uitgebreidere set Microsoft-identiteiten via het zogenoemde Azure AD v2.0-eindpunt met behulp van Microsoft Authentication Library (MSAL), de Azure-portal of de Microsoft Graph API.</p>
-      image:
-        src: ./media/index/i_investigate.svg
-      title: v2.0
-- title: Snelstartgidsen
-  items:
-  - type: paragraph
-    text: Volg deze snelstarts om snel een app te bouwen en functionaliteit toe te voegen, zoals tokens ophalen, tokens vernieuwen, gebruikers aanmelden, bepaalde gebruikersgegevens weergeven enz.
-  - type: paragraph
-    text: <b>Toepassingen met één pagina</b>
-  - type: table
-    style: dataMatrix
-    columns:
-    - image:
-        src: ./media/index/angularjs-shield.svg
-      title: AngularJS
-    - image:
-        src: ./media/index/logo_js.svg
-      title: Javascript
-    rows:
-    - title: v1.0
-      values:
-      - href: quickstart-v1-angularjs-spa.md
-      - href: https://github.com/Azure-Samples/active-directory-javascript-singlepageapp-dotnet-webapi
-    - title: v2.0
-      values:
-      - href: 
-      - href: quickstart-v2-javascript.md
-  - type: paragraph
-    text: <b>Web-apps</b>
-  - type: table
-    style: dataMatrix
-    columns:
-    - image:
-        src: ./media/index/logo_NET.svg
-      title: ASP.NET
-    - image:
-        src: ./media/index/logo_NETcore.svg
-      title: ASP.NET Core
-    - image:
-        src: ./media/index/logo_java.svg
-      title: Java
-    - image:
-        src: ./media/index/logo_nodejs.svg
-      title: Node.js
-    - image:
-        src: ./media/index/logo_python.svg
-      title: Python
-    rows:
-    - title: v1.0
-      values:
-      - href: quickstart-v1-aspnet-webapp.md
-      - href: 
-      - href: https://github.com/Azure-Samples/active-directory-java-webapp-openidconnect
-      - href: quickstart-v1-openid-connect-code.md
-      - href: https://github.com/Azure-Samples/active-directory-python-webapp-graphapi
-    - title: v2.0
-      values:
-      - href: quickstart-v2-aspnet-webapp.md
-      - href: quickstart-v2-aspnet-core-webapp.md
-      - href: 
-      - href: https://github.com/AzureADQuickStarts/AppModelv2-WebApp-OpenIDConnect-nodejs
-      - href: 
-  - type: paragraph
-    text: <b>Web-API's</b>
-  - type: table
-    style: dataMatrix
-    columns:
-    - image:
-        src: ./media/index/logo_NET.svg
-      title: ASP.NET
-    - image:
-        src: ./media/index/logo_NETcore.svg
-      title: ASP.NET Core
-    - image:
-        src: ./media/index/logo_nodejs.svg
-      title: Node.js
-    rows:
-    - title: v1.0
-      values:
-      - href: quickstart-v1-dotnet-webapi.md
-      - href: 
-      - href: quickstart-v1-nodejs-webapi.md
-    - title: v2.0
-      values:
-      - href: https://github.com/azureadquickstarts/appmodelv2-nativeclient-dotnet
-      - href: https://azure.microsoft.com/resources/samples/active-directory-dotnet-native-aspnetcore-v2
-      - href: 
-  - type: paragraph
-    text: <b>Mobiele en bureaubladapps</b>
-  - type: table
-    style: dataMatrix
-    columns:
-    - image:
-        src: ./media/index/logo_android.svg
-      title: Android
-    - image:
-        src: ./media/index/logo_ios.svg
-      title: iOS
-    - image:
-        src: ./media/index/logo_Windows.svg
-      title: Universeel Windows-platform
-    - image:
-        src: ./media/index/logo_Windows.svg
-      title: .NET voor Windows Desktop
-    - image:
-        src: ./media/index/logo_xamarin.svg
-      title: Xamarin
-    rows:
-    - title: v1.0
-      values:
-      - href: quickstart-v1-android.md
-      - href: quickstart-v1-ios.md
-      - href: 
-      - href: quickstart-v1-dotnet.md
-      - href: quickstart-v1-xamarin.md
-    - title: v2.0
-      values:
-      - href: quickstart-v2-android.md
-      - href: quickstart-v2-ios.md
-      - href: quickstart-v2-uwp.md
-      - href: quickstart-v2-windows-desktop.md
-      - href: 
-  - type: paragraph
-    text: <b>Service-naar-service en daemon-apps</b>
-  - type: table
-    style: dataMatrix
-    columns:
-    - image:
-        src: ./media/index/logo_NET.svg
-      title: .NET
-    rows:
-    - title: v1.0
-      values:
-      - href: sample-v1-code.md
-    - title: v2.0
-      values:
-      - href: quickstart-v2-netcore-daemon.md
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: paragraph
-    text: Gebruik het Microsoft Identity Platform en volg gedetailleerde, op scenario's gebaseerde procedures voor de belangrijkste verificatiegerelateerde ontwikkeltaken, zoals toegangstokens verkrijgen, aanmelding via Microsoft implementeren enz.
-  - type: paragraph
-    text: <b>Toepassingen met één pagina</b>
-  - type: table
-    style: dataMatrix
-    columns:
-    - image:
-        src: ./media/index/logo_js.svg
-      title: Javascript
-    rows:
-    - title: v1.0
-      values:
-      - href: 
-    - title: v2.0
-      values:
-      - href: tutorial-v2-javascript-spa.md
-  - type: paragraph
-    text: <b>Web-apps</b>
-  - type: table
-    style: dataMatrix
-    columns:
-    - image:
-        src: ./media/index/logo_NET.svg
-      title: ASP.NET
-    rows:
-    - title: v1.0
-      values:
-      - href: 
-    - title: v2.0
-      values:
-      - href: tutorial-v2-asp-webapp.md
-  - type: paragraph
-    text: <b>Mobiele en bureaubladapps</b>
-  - type: table
-    style: dataMatrix
-    columns:
-    - image:
-        src: ./media/index/logo_android.svg
-      title: Android
-    - image:
-        src: ./media/index/logo_ios.svg
-      title: iOS
-    - image:
-        src: ./media/index/logo_Windows.svg
-      title: Universeel Windows-platform
-    - image:
-        src: ./media/index/logo_Windows.svg
-      title: .NET voor Windows Desktop
-    rows:
-    - title: v1.0
-      values:
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-    - title: v2.0
-      values:
-      - href: tutorial-v2-android.md
-      - href: tutorial-v2-ios.md
-      - href: tutorial-v2-windows-uwp.md
-      - href: tutorial-v2-windows-desktop.md
-- title: Voorbeelden
-  items:
-  - type: paragraph
-    text: Profiteer van codevoorbeelden op basis van het type app dat u ontwikkelt, uw platform en de API's die u gebruikt.
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: 'Volg deze snelstarts om snel een app te bouwen en functionaliteit toe te voegen, zoals tokens ophalen, tokens vernieuwen, gebruikers aanmelden, bepaalde gebruikersgegevens weergeven enz.'
+      - type: paragraph
+        text: <b>Toepassingen met één pagina</b>
+      - type: table
+        style: dataMatrix
+        columns:
+          - image:
+              src: ./media/index/angularjs-shield.svg
+            title: AngularJS
+          - image:
+              src: ./media/index/logo_js.svg
+            title: Javascript
+        rows:
+          - title: v1.0
+            values:
+              - href: quickstart-v1-angularjs-spa.md
+              - href: 'https://github.com/Azure-Samples/active-directory-javascript-singlepageapp-dotnet-webapi'
+          - title: v2.0
+            values:
+              - href: null
+              - href: quickstart-v2-javascript.md
+      - type: paragraph
+        text: <b>Web-apps</b>
+      - type: table
+        style: dataMatrix
+        columns:
+          - image:
+              src: ./media/index/logo_NET.svg
+            title: ASP.NET
+          - image:
+              src: ./media/index/logo_NETcore.svg
+            title: ASP.NET Core
+          - image:
+              src: ./media/index/logo_java.svg
+            title: Java
+          - image:
+              src: ./media/index/logo_nodejs.svg
+            title: Node.js
+          - image:
+              src: ./media/index/logo_python.svg
+            title: Python
+        rows:
+          - title: v1.0
+            values:
+              - href: quickstart-v1-aspnet-webapp.md
+              - href: null
+              - href: 'https://github.com/Azure-Samples/active-directory-java-webapp-openidconnect'
+              - href: quickstart-v1-openid-connect-code.md
+              - href: 'https://github.com/Azure-Samples/active-directory-python-webapp-graphapi'
+          - title: v2.0
+            values:
+              - href: quickstart-v2-aspnet-webapp.md
+              - href: quickstart-v2-aspnet-core-webapp.md
+              - href: null
+              - href: 'https://github.com/AzureADQuickStarts/AppModelv2-WebApp-OpenIDConnect-nodejs'
+              - href: null
+      - type: paragraph
+        text: <b>Web-API's</b>
+      - type: table
+        style: dataMatrix
+        columns:
+          - image:
+              src: ./media/index/logo_NET.svg
+            title: ASP.NET
+          - image:
+              src: ./media/index/logo_NETcore.svg
+            title: ASP.NET Core
+          - image:
+              src: ./media/index/logo_nodejs.svg
+            title: Node.js
+        rows:
+          - title: v1.0
+            values:
+              - href: quickstart-v1-dotnet-webapi.md
+              - href: null
+              - href: quickstart-v1-nodejs-webapi.md
+          - title: v2.0
+            values:
+              - href: 'https://github.com/azureadquickstarts/appmodelv2-nativeclient-dotnet'
+              - href: 'https://azure.microsoft.com/resources/samples/active-directory-dotnet-native-aspnetcore-v2'
+              - href: null
+      - type: paragraph
+        text: <b>Mobiele en bureaubladapps</b>
+      - type: table
+        style: dataMatrix
+        columns:
+          - image:
+              src: ./media/index/logo_android.svg
+            title: Android
+          - image:
+              src: ./media/index/logo_ios.svg
+            title: iOS
+          - image:
+              src: ./media/index/logo_Windows.svg
+            title: Universeel Windows-platform
+          - image:
+              src: ./media/index/logo_Windows.svg
+            title: .NET voor Windows Desktop
+          - image:
+              src: ./media/index/logo_xamarin.svg
+            title: Xamarin
+        rows:
+          - title: v1.0
+            values:
+              - href: quickstart-v1-android.md
+              - href: quickstart-v1-ios.md
+              - href: null
+              - href: quickstart-v1-dotnet.md
+              - href: quickstart-v1-xamarin.md
+          - title: v2.0
+            values:
+              - href: quickstart-v2-android.md
+              - href: quickstart-v2-ios.md
+              - href: quickstart-v2-uwp.md
+              - href: quickstart-v2-windows-desktop.md
+              - href: null
+      - type: paragraph
+        text: <b>Service-naar-service en daemon-apps</b>
+      - type: table
+        style: dataMatrix
+        columns:
+          - image:
+              src: ./media/index/logo_NET.svg
+            title: .NET
+        rows:
+          - title: v1.0
+            values:
+              - href: sample-v1-code.md
+          - title: v2.0
+            values:
+              - href: quickstart-v2-netcore-daemon.md
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - html: <a href="/azure/active-directory/develop/sample-v1-code">v1.0-codevoorbeelden per scenario</a>
-    - html: <a href="/azure/active-directory/develop/sample-v2-code">v2.0-codevoorbeelden per scenario</a>
+      - type: paragraph
+        text: 'Gebruik het Microsoft Identity Platform en volg gedetailleerde, op scenario''s gebaseerde procedures voor de belangrijkste verificatiegerelateerde ontwikkeltaken, zoals toegangstokens verkrijgen, aanmelding via Microsoft implementeren enz.'
+      - type: paragraph
+        text: <b>Toepassingen met één pagina</b>
+      - type: table
+        style: dataMatrix
+        columns:
+          - image:
+              src: ./media/index/logo_js.svg
+            title: Javascript
+        rows:
+          - title: v1.0
+            values:
+              - href: null
+          - title: v2.0
+            values:
+              - href: tutorial-v2-javascript-spa.md
+      - type: paragraph
+        text: <b>Web-apps</b>
+      - type: table
+        style: dataMatrix
+        columns:
+          - image:
+              src: ./media/index/logo_NET.svg
+            title: ASP.NET
+        rows:
+          - title: v1.0
+            values:
+              - href: null
+          - title: v2.0
+            values:
+              - href: tutorial-v2-asp-webapp.md
+      - type: paragraph
+        text: <b>Mobiele en bureaubladapps</b>
+      - type: table
+        style: dataMatrix
+        columns:
+          - image:
+              src: ./media/index/logo_android.svg
+            title: Android
+          - image:
+              src: ./media/index/logo_ios.svg
+            title: iOS
+          - image:
+              src: ./media/index/logo_Windows.svg
+            title: Universeel Windows-platform
+          - image:
+              src: ./media/index/logo_Windows.svg
+            title: .NET voor Windows Desktop
+        rows:
+          - title: v1.0
+            values:
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+          - title: v2.0
+            values:
+              - href: tutorial-v2-android.md
+              - href: tutorial-v2-ios.md
+              - href: tutorial-v2-windows-uwp.md
+              - href: tutorial-v2-windows-desktop.md
+  - title: Voorbeelden
+    items:
+      - type: paragraph
+        text: 'Profiteer van codevoorbeelden op basis van het type app dat u ontwikkelt, uw platform en de API''s die u gebruikt.'
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/active-directory/develop/sample-v1-code">v1.0-codevoorbeelden per scenario</a>
+          - html: <a href="/azure/active-directory/develop/sample-v2-code">v2.0-codevoorbeelden per scenario</a>
