--- a/articles/cognitive-services/LUIS/toc.yml
+++ b/articles/cognitive-services/LUIS/toc.yml
@@ -62,11 +62,14 @@ items:
       href: luis-quickstart-intents-regex-entity.md
     - name: Exact overeenkomende tekst met lijsten ophalen
       href: luis-quickstart-intent-and-list-entity.md
-    - name: Context-gerelateerde gegevens met hiërarchische entiteiten ophalen
-      href: luis-quickstart-intent-and-hier-entity.md
+    - name: Gerelateerde gegevens met entiteitsrollen ophalen
+      displayName: roles, geographyV2, context
+      href: tutorial-entity-roles.md
     - name: Gerelateerde gegevens met samengestelde entiteiten ophalen
+      displayName: roles
       href: luis-tutorial-composite-entity.md
     - name: Namen met eenvoudige entiteiten ophalen
+      displayName: roles
       href: luis-quickstart-primary-and-secondary-data.md
   - name: App verbeteren
     items:
@@ -77,6 +80,7 @@ items:
     - name: Algemene vormen voor uitingen toevoegen
       href: luis-tutorial-pattern.md
     - name: Contextgerelateerde patronen herkennen
+      displayName: roles
       href: luis-tutorial-pattern-roles.md
     - name: Vrije vorm-gegevens herkennen
       href: luis-tutorial-pattern-any.md
@@ -113,7 +117,7 @@ items:
     - name: Intents
       href: luis-concept-intent.md
     - name: Entiteiten
-      displayName: prebuilt, custom, regular expression, regex, simple, list, pattern.any, composite, hierarchical, machine-learn, exact, mixed
+      displayName: prebuilt, custom, regular expression, regex, simple, list, pattern.any, composite, hierarchical, machine-learn, exact, mixed, roles
       href: luis-concept-entity-types.md
     - name: Utterances
       href: luis-concept-utterance.md
@@ -130,6 +134,7 @@ items:
     - name: Woordgroepenlijsten
       href: luis-concept-feature.md
     - name: Patronen
+      displayName: roles
       href: luis-concept-patterns.md
   - name: Gegevensbeheer
     items:
@@ -138,6 +143,7 @@ items:
     - name: Gegevens converteren
       href: luis-concept-data-conversion.md
     - name: Gegevens uitpakken
+      displayName: roles
       href: luis-concept-data-extraction.md
     - name: Gegevensopslag
       href: luis-concept-data-storage.md
@@ -171,7 +177,7 @@ items:
     - name: Entiteit toevoegen aan utterance
       href: luis-how-to-add-example-utterances.md
     - name: Entiteit toevoegen zonder utterance
-      displayName: import
+      displayName: roles, import
       href: luis-how-to-add-entities.md
     - name: Vooraf gemaakte modellen gebruiken
       items:
@@ -220,7 +226,7 @@ items:
       displayName: synonym, interchange
       href: luis-how-to-add-features.md
     - name: Patronen toevoegen
-      displayName: syntax, template
+      displayName: syntax, template, roles
       href: luis-how-to-model-intent-pattern.md
   - name: Trainen
     href: luis-how-to-train.md
@@ -410,9 +416,9 @@ items:
     href: https://blog.botframework.com/category/luis/
   - name: Knowledge Base
     href: https://cognitive.uservoice.com/knowledgebase/topics/127872-luis-language-understanding-intelligent-service
-ms.openlocfilehash: db4e3cf9cad70556b057645dec52c9705fb29079
-ms.sourcegitcommit: 0a3efe5dcf56498010f4733a1600c8fe51eb7701
+ms.openlocfilehash: 1a35c8befbffae02a169e87390677c547aec833c
+ms.sourcegitcommit: 1c2cf60ff7da5e1e01952ed18ea9a85ba333774c
 ms.translationtype: HT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 04/03/2019
-ms.locfileid: "58896105"
+ms.lasthandoff: 04/12/2019
+ms.locfileid: "59523678"
