--- a/articles/machine-learning/service/toc.yml
+++ b/articles/machine-learning/service/toc.yml
@@ -132,13 +132,14 @@ items:
   - name: Machine learning automatiseren
     displayName: automl, auto ml
     items:
-    - name: Training in Python automatiseren
+    - name: Automatische ML gebruiken (Python)
       displayName: SDK automl
       href: how-to-configure-auto-train.md
     - name: Externe compute-doelen gebruiken
       displayName: automl automated auto ml
       href: how-to-auto-train-remote.md
-    - name: Automatisch prognosemodellen trainen
+    - name: Automatisch een prognosemodel trainen
+      displayName: time series
       href: how-to-auto-train-forecast.md
   - name: ONNX-modellen
     href: how-to-build-deploy-onnx.md
@@ -212,9 +213,9 @@ items:
   - name: Onze ML-producten vergelijken
     href: /azure/architecture/data-guide/technology-choices/data-science-and-machine-learning
     maintainContext: true
-ms.openlocfilehash: 6106a8ea03253b0787bb740295f839301543f9c6
-ms.sourcegitcommit: 1a19a5845ae5d9f5752b4c905a43bf959a60eb9d
+ms.openlocfilehash: 647c949a8f999a34963ddfa49f1df8a1606a1295
+ms.sourcegitcommit: 1c2cf60ff7da5e1e01952ed18ea9a85ba333774c
 ms.translationtype: HT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 04/11/2019
-ms.locfileid: "59495444"
+ms.lasthandoff: 04/12/2019
+ms.locfileid: "59521764"
