--- a/articles/media-services/latest/index.yml
+++ b/articles/media-services/latest/index.yml
@@ -12,7 +12,7 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 03/20/2019
+  ms.date: 04/12/2019
   ms.author: juliako
 abstract:
   description: 'Informatie over coderen en verpakken van content, video-streaming op aanvraag, live uitzenden en het analyseren van uw video''s met Media Services v3. Zelfstudies, API-verwijzingen en andere documentatie laten zien hoe u veilig on-demand of live video- of audiostromen levert aan miljoenen gebruikers. <br/> De SDK''s zijn gebaseerd op <a href="https://aka.ms/ams-v3-rest-sdk">Media Services v3 OpenAPI-specificatie (Swagger)</a>.'
@@ -26,7 +26,7 @@ sections:
           - title: Informatie over concepten
             html: '<p><a href="https://docs.microsoft.com/azure/media-services/latest/storage-account-concept">Uploaden naar en opslaan in de cloud</a></p><p><a href="https://docs.microsoft.com/azure/media-services/latest/encoding-concept">Encoding</a></p><p><a href="https://docs.microsoft.com/azure/media-services/latest/reacting-to-media-services-events">Controle</a></p><p><a href="https://docs.microsoft.com/azure/media-services/latest/analyzing-video-audio-files-concept">Media Analytics</a></p><p><a href="https://docs.microsoft.com/azure/media-services/latest/dynamic-packaging-overview">Verpakken</a></p><p><a href="https://docs.microsoft.com/azure/media-services/latest/content-protection-overview">Beveiliging</a></p><p><a href="https://docs.microsoft.com/azure/media-services/latest/live-streaming-overview">Live streamen</a></p><p><a href="https://docs.microsoft.com/azure/media-services/latest/use-azure-media-player">Afspeel-clients</a></p>'
           - title: Ontwikkelen met de v3-API
-            html: '<p><a href="https://docs.microsoft.com/azure/media-services/latest/developers-guide">Begin met ontwikkelen met SDK''s</a></p><p><a href="https://docs.microsoft.com/azure/media-services/latest/media-rest-apis-with-postman">Ontwikkelen met REST</a></p><p><a href="https://docs.microsoft.com/azure/media-services/latest/configure-connect-java-howto">Verbinding maken met Java</a></p><p><a href="https://docs.microsoft.com/azure/media-services/latest/configure-connect-dotnet-howto">Verbinding maken met .NET</a></p><p><a href="https://docs.microsoft.com/azure/media-services/latest/configure-connect-nodejs-howto">Verbinding maken met Node.js</a></p>'
+            html: '<p><a href="https://docs.microsoft.com/azure/media-services/latest/media-rest-apis-with-postman">Ontwikkelen met REST</a></p><p><a href="https://docs.microsoft.com/azure/media-services/latest/developers-guide">Ontwikkelen met SDK''s</a></p><p><a href="https://docs.microsoft.com/azure/media-services/latest/configure-connect-java-howto">Verbinding maken met Java</a></p><p><a href="https://docs.microsoft.com/azure/media-services/latest/configure-connect-dotnet-howto">Verbinding maken met .NET</a></p><p><a href="https://docs.microsoft.com/azure/media-services/latest/configure-connect-nodejs-howto">Verbinding maken met Node.js</a></p>'
   - title: QuickStarts van vijf minuten
     items:
       - type: paragraph
